# gleisner

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LEAN-INTEGRATION-RESEARCH.md  LICENSE-APACHE  LICENSE-MIT  README.md  THREAT_MODEL.md  VERIFIED-PROPERTIES-SUMMARY.md  deny.toml
.github/workflows/: ci.yml
contrib/: audisp-landlock-filter.sh  audisp-landlock.conf  get-sigstore-token.sh
crates/gleisner-bridger/: Cargo.toml
crates/gleisner-bridger/src/: cargo_lock.rs  cyclonedx.rs  error.rs  lib.rs  sbom.rs
crates/gleisner-cli/: Cargo.toml
crates/gleisner-cli/src/: config.rs  main.rs
crates/gleisner-cli/src/commands/: diff.rs  forge.rs  forge_diff.rs  inspect.rs  learn.rs  mod.rs  record.rs  sbom.rs  verify.rs  wrap.rs
crates/gleisner-cli/tests/: cli.rs
crates/gleisner-container/: Cargo.toml
crates/gleisner-container/src/: builder.rs  command.rs  delegate.rs  error.rs  forge.rs  lib.rs  minimal_toml.rs  observe.rs  pool.rs  probe.rs  task.rs  types.rs  verify.rs
crates/gleisner-container/tests/: e2e_sandbox.rs  forge_integration.rs  full_pipeline.rs  observe_and_narrow.rs  proptests.proptest-regressions  proptests.rs  verify_policy.rs
crates/gleisner-forge/: Cargo.toml
crates/gleisner-forge/examples/: eval_minimal.rs
crates/gleisner-forge/src/: attest.rs  bridge.rs  compose.rs  dag.rs  deploy.rs  diff.rs  error.rs  eval.rs  harness.rs  lib.rs  negotiate.rs  orchestrate.rs  sbom.rs  store.rs  verify.rs
crates/gleisner-forge/tests/: integration.rs
crates/gleisner-introdus/: Cargo.toml
crates/gleisner-introdus/src/: bundle.rs  chain.rs  claude_code.rs  error.rs  lib.rs  metadata.rs  provenance.rs  recorder.rs  signer.rs  statement.rs  vcs.rs
crates/gleisner-lacerta/: Cargo.toml
crates/gleisner-lacerta/examples/: analyze_composition.rs
crates/gleisner-lacerta/src/: composition_analysis.rs  diff.rs  digest.rs  error.rs  inspect.rs  lib.rs  policy.rs  policy_lattice.rs  policy_wasm.rs  signature.rs  verify.rs
crates/gleisner-lacerta/tests/: composition_e2e.rs  policy_lattice_e2e.rs  z3_pkgs_analysis.rs
crates/gleisner-polis/: Cargo.toml
crates/gleisner-polis/src/: audit_log.rs  bwrap.rs  error.rs  fanotify.rs  fs_monitor.rs  inotify_mon.rs  landlock.rs  learner.rs  lib.rs  monitor.rs  namespace.rs  netfilter.rs  policy.rs  procmon.rs  profile.rs  resource.rs  sandbox.rs  session.rs  util.rs
crates/gleisner-sandbox-init/: Cargo.toml
crates/gleisner-sandbox-init/src/: main.rs  runtime.rs  seccomp.rs
crates/gleisner-scapes/: Cargo.toml
crates/gleisner-scapes/src/: audit.rs  error.rs  lib.rs  stream.rs
crates/gleisner-tui/: Cargo.toml
crates/gleisner-tui/src/: app.rs  claude.rs  lib.rs  main.rs  stream.rs  ui.rs
crates/gleisner-tui/tests/: driver_integration.rs  live_claude.rs  pty_harness.rs  stream_fixtures.rs
crates/gleisner-tui/tests/fixtures/: build-test.jsonl  cargo-test.jsonl  code-review-test.jsonl  context7_response.jsonl  disallowed_tools_response.jsonl  edit-test.jsonl  error_tool_response.jsonl  multi_tool_response.jsonl  multi_turn_with_errors.jsonl  parallel_tools_response.jsonl  resume-turn1.jsonl  resume-turn2.jsonl  serena_analysis_response.jsonl  simple_response.jsonl  tool_use_response.jsonl  web_search_response.jsonl
deploy/: aws-config.example.json  ec2-deploy.sh  setup-iam.sh  verify-session.sh
docs/: AGENT_COORDINATION.md  ARCHITECTURE.md  DEBUGGING.md  FORGE.md  LEAN-INTEGRATION-RESEARCH.md  RUST_PATTERNS.md  SECURITY.md  THREAT_MODEL.md
docs/demo/: forge-one-pager.md  full-pipeline-attestation.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_audit_jsonl.rs  fuzz_compose_merge.rs  fuzz_expand_tilde.rs  fuzz_store_hash.rs  fuzz_system_prompt.rs  fuzz_task_sandbox.rs
nickel/: build.sh  gleisner.ncl
profiles/: ashton-laval.toml  carter-zimmerman.toml  developer-open.toml  developer.toml  konishi.toml
