[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/lexicone42/gleisner"
homepage = "https://github.com/lexicone42/gleisner"
categories = ["development-tools", "command-line-utilities"]
keywords = ["supply-chain", "attestation", "sandbox", "claude-code", "slsa"]

# ──────────────────────────────────────────────────────────────
# Workspace dependency inheritance: ALL versions go here.
# Crate Cargo.toml files use `dep.workspace = true` only.
# Never duplicate a version number in a member crate.
# ──────────────────────────────────────────────────────────────
[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive", "env", "wrap_help"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Cryptography
sha2 = "0.10"
hex = "0.4"
aws-lc-rs = { version = "1", features = ["ring-sig-verify"] }
base64 = "0.22"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Error handling
thiserror = "2"
color-eyre = "0.6"

# Tracing / logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Linux system interfaces
nix = { version = "0.29", features = ["process", "signal", "mount", "sched", "resource", "hostname", "fanotify", "user"] }
tokio-util = { version = "0.7", features = ["rt"] }
landlock = "0.4"

# Git
gix = { version = "0.68", default-features = false, features = ["basic"] }

# Sigstore
sigstore = "0.10"

# X.509 / ASN.1
x509-cert = { version = "0.2", features = ["pem"] }
der = "0.7"

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = "0.29"

# Policy (WASM runtime for OPA/Rego)
wasmtime = "27"

# Filesystem
directories = "6"
which = "7"

# PTY / terminal emulation (for TUI testing)
portable-pty = "0.9"
vt100 = "0.16"

# Testing
assert_cmd = "2"
predicates = "3"
tempfile = "3"
proptest = "1"

# Internal crates
gleisner-polis = { path = "crates/gleisner-polis" }
gleisner-introdus = { path = "crates/gleisner-introdus" }
gleisner-bridger = { path = "crates/gleisner-bridger" }
gleisner-scapes = { path = "crates/gleisner-scapes" }
gleisner-lacerta = { path = "crates/gleisner-lacerta" }
gleisner-tui = { path = "crates/gleisner-tui" }

# ──────────────────────────────────────────────────────────────
# Workspace lint inheritance: ALL lint config goes here.
# Crate Cargo.toml files use `[lints] workspace = true` only.
# ──────────────────────────────────────────────────────────────
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "deny"

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Pedantic overrides
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
# Enforce modern patterns
manual_let_else = "warn"
redundant_clone = "warn"
needless_pass_by_value = "warn"
cloned_instead_of_copied = "warn"
flat_map_option = "warn"
from_iter_instead_of_collect = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
semicolon_if_nothing_returned = "warn"
uninlined_format_args = "warn"
