[package]
name = "gleisner-bridger"
version = "0.1.0"
description = "SBOM generation and dependency trust analysis for Claude Code projects"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
hex.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
