[package]
name = "gleisner-introdus"
version = "0.1.0"
description = "Attestation and cryptographic provenance for Claude Code sessions"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
keyless = ["dep:sigstore-sign", "dep:sigstore-oidc"]

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
hex.workspace = true
aws-lc-rs.workspace = true
base64.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
nix.workspace = true
gix.workspace = true
directories.workspace = true
sigstore.workspace = true
sigstore-sign = { workspace = true, optional = true }
sigstore-oidc = { workspace = true, optional = true }
gleisner-scapes.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
