[package]
name = "gleisner-polis"
version = "0.1.0"
description = "Hermetic sandbox for Claude Code — the trusted execution environment"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
nix.workspace = true
landlock.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
which.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
