[package]
name = "gleisner-polis"
version = "0.1.0"
description = "Hermetic sandbox for Claude Code — the trusted execution environment"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
nix.workspace = true
landlock.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
directories.workspace = true
which.workspace = true
gleisner-scapes.workspace = true
tokio-util.workspace = true
sha2.workspace = true
hex.workspace = true
chrono.workspace = true
tempfile.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints]
workspace = true
