[package]
name = "gleisner-sandbox-init"
version = "0.1.0"
description = "Container runtime — creates namespaces, bind mounts, pivot_root, Landlock"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "gleisner-sandbox-init"
path = "src/main.rs"

[dependencies]
gleisner-polis.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
seccompiler.workspace = true

[dev-dependencies]
tempfile.workspace = true

# Override workspace lints to allow unsafe_code in this crate
# (direct syscalls via nix require it). All other workspace lints
# are duplicated here to stay consistent.
[lints.rust]
unsafe_code = "allow"
missing_docs = "warn"
unreachable_pub = "warn"
unused_qualifications = "warn"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
manual_let_else = "warn"
redundant_clone = "warn"
