[package]
name = "gleisner-tui"
version = "0.1.0"
description = "Ratatui-based TUI for gleisner — security-aware AI coding REPL"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
keyless = ["gleisner-introdus/keyless", "dep:sigstore-sign", "dep:sigstore-oidc"]

[dependencies]
# TUI
ratatui.workspace = true
crossterm.workspace = true
unicode-width.workspace = true

# Async
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
color-eyre.workspace = true

# Logging (debug mode)
tracing.workspace = true
tracing-subscriber.workspace = true

# Internal
gleisner-scapes.workspace = true
gleisner-polis.workspace = true
gleisner-bridger.workspace = true
gleisner-lacerta.workspace = true
gleisner-introdus.workspace = true

# Attestation pipeline
tokio-util.workspace = true
chrono.workspace = true
sha2.workspace = true

# Sigstore keyless signing (optional, behind `keyless` feature)
sigstore-sign = { workspace = true, optional = true }
sigstore-oidc = { workspace = true, optional = true }

[dev-dependencies]
# PTY-based integration testing
portable-pty.workspace = true
vt100.workspace = true
tempfile.workspace = true

[lints]
workspace = true
